--- a/index.html
+++ b/index.html
@@ -5,57 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#"> <span>WEB</span>STUDIO</a>
+      <nav class="nav-panel">
+        <a href="index.html"> <span class="logo">WEB</span><span class="studio-black">STUDIO</span></a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="index.html" class="link">Studio</a></li>
+          <li><a href="portfolio.html" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+      <ul>
+        <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
+      </ul>
     </header>
     <main>
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="main-text">
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button">Order Service</button>
+        <button type="button" class="main-butt">Order Service</button>
       </section>
-      <section>
+      <section class="section-title">
         <h2>Section1</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="tittle">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="tittle">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="tittle">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="tittle">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
@@ -63,8 +66,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
+      <section class="section-title">
+        <h2 class="tittle-to">What are we doing</h2>
         <ul>
           <li><img src="./images/img1.jpg" alt="personal computer" width="360" height="300" />;</li>
           <li><img src="./images/img2.jpg" alt="smartphone" width="360" height="300" />;</li>
@@ -74,10 +77,10 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="tittle-to">Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260"/>
+            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -99,8 +102,8 @@
         </ul>
       </section>
     </main>
-    <footer>
-        <a href="#"> <span>WEB</span>STUDIO</a>
+    <footer class="footer">
+      <a href="index.html"> <span class="logo">WEB</span><span class="studio-white">STUDIO</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
