--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <body>
     <header>
       <nav class="nav-panel">
-        <a href="index.html"> <span class="logo">WEB</span><span class="studio-black">STUDIO</span></a>
-        <ul>
+        <a href="index.html" class="logotype"> <span class="logo">WEB</span><span class="studio-black">STUDIO</span></a>
+        <ul class="list">
           <li><a href="index.html" class="link">Studio</a></li>
           <li><a href="portfolio.html" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
       </ul>
@@ -33,8 +33,8 @@
         <button type="button" class="main-butt">Order Service</button>
       </section>
       <section class="section-title">
-        <h2>Section1</h2>
-        <ul>
+        <h2 class="section1">Section1</h2>
+        <ul class="list">
           <li>
             <h3 class="tittle">Strategy</h3>
             <p>
@@ -67,7 +67,7 @@
       </section>
       <section class="section-title">
         <h2 class="tittle-to">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li><img src="./images/img1.jpg" alt="personal computer" width="360" height="300" />;</li>
           <li><img src="./images/img2.jpg" alt="smartphone" width="360" height="300" />;</li>
           <li>
@@ -77,7 +77,7 @@
       </section>
       <section>
         <h2 class="tittle-to">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
             <h3>Mark Guerrero</h3>
@@ -102,7 +102,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="index.html"> <span class="logo">WEB</span><span class="studio-white">STUDIO</span></a>
+      <a href="index.html" class="logotype"> <span class="logo">WEB</span><span class="studio-white">STUDIO</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
