--- a/portfolio.html
+++ b/portfolio.html
@@ -5,36 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
   </head>
   <body>
     <header>
       <nav class="nav-panel">
-        <a href="index.html"> <span class="logo">WEB</span><span class="studio-black">STUDIO</span></a>
-        <ul>
+        <a href="index.html" class="logotype"> <span class="logo">WEB</span><span class="studio-black">STUDIO</span></a>
+        <ul class="list">
           <li><a href="index.html" class="link">Studio</a></li>
           <li><a href="portfolio.html" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
         <li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
     <main>
       <section class="buttons-menu">
-        <ul>
+        <ul class="list">
           <li><button type="button" class="button">All</button></li>
           <li><button type="button" class="button">Web Site</button></li>
           <li><button type="button" class="button">App</button></li>
           <li><button type="button" class="button">Design</button></li>
           <li><button type="button" class="button">Marketing</button></li>
         </ul>
-      </section>
-      <section>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/port1.jpg" alt="portfolio1" width="360" />
             <h3 class="tittle">Banking App Interface Concept</h3>
@@ -88,7 +87,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="index.html"> <span class="logo">WEB</span><span class="studio-white">STUDIO</span></a>
+      <a href="index.html" class="logotype"> <span class="logo">WEB</span><span class="studio-white">STUDIO</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
