--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <section class="section-title">
         <h2 class="tittle-to">What are we doing</h2>
         <ul class="list">
-          <li><img src="./images/img1.jpg" alt="personal computer" width="360" height="300" />;</li>
-          <li><img src="./images/img2.jpg" alt="smartphone" width="360" height="300" />;</li>
+          <li><img src="./images/img1.jpg" alt="personal computer" width="360" height="300" /></li>
+          <li><img src="./images/img2.jpg" alt="smartphone" width="360" height="300" /></li>
           <li>
-            <img src="./images/img3.jpg" alt="smartphone and notebook" width="360" height="300" />;
+            <img src="./images/img3.jpg" alt="smartphone and notebook" width="360" height="300" />
           </li>
         </ul>
       </section>
