--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3>CDaniel Wilson</h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
