--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="buttons-menu" class="tittle" >
         <h2 class="tittle-to">Our Team</h2>
         <ul class="list">
           <li>
             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
+            <h3 class="tittle" >Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3>Tom Ford</h3>
+            <h3 class="tittle" >Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h3>Camila Garcia</h3>
+            <h3 class="tittle" >Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3>Daniel Wilson</h3>
+            <h3 class="tittle" >Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
