--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       </ul>
     </header>
     <main>
-      <section class="buttons-menu">
+      <section>
         <ul class="list">
           <li><button type="button" class="button">All</button></li>
           <li><button type="button" class="button">Web Site</button></li>
